ORC-1151: [C++] Fix ColumnWriter for non-UTC Timestamp columns (#1088)

### What changes were proposed in this pull request?
Fix converting non UTC timestamps for statistics.

### Why are the changes needed?
Currently, the statistics for timestamp columns are incorrect, when the writer's time zone is not UTC.

### How was this patch tested?
Ran the existing test cases.